# gothaer-cc-oktober-2025

NimPython/nimspiel/nimspielPython/nimspiel_01/: pyproject.toml
NimPython/nimspiel/nimspielPython/nimspiel_01/bagoit_game/: Client.py  IGame.py  Main.py  Nimspiel.py  __about__.py  __init__.py
NimPython/nimspiel/nimspielPython/nimspiel_02/: README.md  pyproject.toml
NimPython/nimspiel/nimspielPython/nimspiel_02/bagoit_game/: Game.py  IGame.py  __about__.py
NimPython/nimspiel/nimspielPython/nimspiel_02/bagoit_game/app/: Main.py
NimPython/nimspiel/nimspielPython/nimspiel_02/bagoit_game/nimgame/: Nimspiel.py
NimPython/nimspiel/nimspielPython/nimspiel_02/bagoit_game/nimgame/player/: ComputerPlayer.py  HumanPlayer.py  INimgamePlayer.py
NimPython/nimspiel/nimspielPython/nimspiel_02/bagoit_game/player/: IPlayer.py
NimPython/nimspiel/nimspielPython/nimspiel_02/tests/: __init__.py
NimSpielProjekt/src/app/: Main.java
NimSpielProjekt/src/client/: Client.java
NimSpielProjekt/src/de/bagoit/game/: Game.java
NimSpielProjekt/src/de/bagoit/game/nimgame/: Nimgame.java
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
